tests/ui/coercion/multistep3.stderr
error[E0308]: `match` arms have incompatible types
  --> $DIR/multistep3.rs:75:18
   |
LL |           |i| match i {
   |  _____________-
LL | |             0 => &Wrap3(Inner)      as &I,
   | |                  ------------------------ this is found to be of type `&Wrap3<dyn Dynable + Send>`
LL | |             1 => &Wrap3(Inner)      as &J,
   | |                  ------------------------ this is found to be of type `&Wrap3<dyn Dynable + Send>`
LL | |             2 => &Wrap3(Inner)      as &K,
   | |                  ^^^^^^^^^^^^^^^^^^^^^^^^ expected trait `Dynable`, found trait `Dynable + Send`
LL | |
LL | |             _ => loop {},
LL | |         }.complete(),
   | |_________- `match` arms have incompatible types
   |
   = note: expected reference `&Wrap3<dyn Dynable + Send>`
              found reference `&Wrap3<(dyn Dynable + 'static)>`

error[E0308]: `match` arms have incompatible types
  --> $DIR/multistep3.rs:90:18
   |
LL |           |i| match i {
   |  _____________-
LL | |             0 => &Wrap3(Inner)      as &I,
   | |                  ------------------------ this is found to be of type `&Wrap3<dyn Dynable>`
LL | |             1 => &Wrap3(Inner)      as &K,
   | |                  ------------------------ this is found to be of type `&Wrap3<dyn Dynable>`
LL | |             2 => &Wrap3(Inner)      as &J,
   | |                  ^^^^^^^^^^^^^^^^^^^^^^^^ expected trait `Dynable + Send`, found trait `Dynable`
LL | |
LL | |             _ => loop {},
LL | |         }.complete(),
   | |_________- `match` arms have incompatible types
   |
   = note: expected reference `&Wrap3<dyn Dynable>`
              found reference `&Wrap3<(dyn Dynable + Send + 'static)>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
